Add friendly intro to cross entropy loss and update template

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><a id="about-me"></a></p>
-<h2 id="About-Me">About Me<a class="anchor-link" href="#About-Me">&#182;</a></h2><p>I'm Rob DiPietro, a PhD student in the <a href="https://www.cs.jhu.edu/">Department of Computer Science at Johns Hopkins</a>, where I'm advised by <a href="http://www.cs.jhu.edu/~hager/">Gregory D. Hager</a>. My research focuses on machine-learning methods for modeling sequential data and on applications of those methods to health care. Previously, I was an associate research-staff member at <a href="http://www.ll.mit.edu/">MIT Lincoln Laboratory</a> and a BS/MS student at <a href="http://www.northeastern.edu/">Northeastern University</a>.</p>
+<h2 id="About-Me">About Me<a class="anchor-link" href="#About-Me">&#182;</a></h2><p>I'm Rob DiPietro, a PhD student in the <a href="https://www.cs.jhu.edu/">Department of Computer Science at Johns Hopkins</a>, where I'm advised by <a href="http://www.cs.jhu.edu/~hager/">Gregory D. Hager</a>. I'm part of the <a href="http://cirl.lcsr.jhu.edu/">Computational Interaction and Robotics Laboratory</a> and the <a href="http://malonecenter.jhu.edu/">Malone Center for Engineering in Healthcare</a>. Previously, I was an associate research-staff member at <a href="http://www.ll.mit.edu/">MIT Lincoln Laboratory</a> and a BS/MS student at <a href="http://www.northeastern.edu/">Northeastern University</a>.</p>
 
 </div>
 </div>
@@ -224,7 +224,7 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><a id="research"></a></p>
-<h2 id="Research">Research<a class="anchor-link" href="#Research">&#182;</a></h2><p>My research is centered around machine-learning methods for modeling sequential data, especially recurrent neural networks and attention-based approaches. From an applications perspective, I focus on health care. For example, <a href="http://www.nejm.org/doi/full/10.1056/NEJMsa1300625">operative skill is connected to postoperative complications</a>, and <a href="http://www.ncbi.nlm.nih.gov/pubmed/19789010">current training practices need to improve</a>. Is it possible to automatically assess performance and automatically provide frequent, objective feedback during training?</p>
+<h2 id="Research">Research<a class="anchor-link" href="#Research">&#182;</a></h2><p>My research focuses on machine-learning methods for modeling sequential data, and I'm especially interested in recurrent neural networks and attention-based approaches. From an applications perspective, I focus on health care. For example, <a href="http://www.nejm.org/doi/full/10.1056/NEJMsa1300625">operative skill is connected to postoperative complications</a>, and <a href="http://www.ncbi.nlm.nih.gov/pubmed/19789010">current training practices need to improve</a>. Is it possible to automatically assess performance and automatically provide frequent, objective feedback during training?</p>
 
 </div>
 </div>
@@ -254,8 +254,8 @@ div#notebook {
 <p><a id="tutorials"></a></p>
 <h2 id="Tutorials">Tutorials<a class="anchor-link" href="#Tutorials">&#182;</a></h2><ul>
 <li>You Already Understand Recurrent Neural Networks. Main point: if you already understand feed-forward networks, then you already understand recurrent networks. Coming soon.</li>
-<li>Let's Talk About Feed-Forward Neural Networks. An introduction to feed-forward networks with emphasis on computation graphs. Coming soon.</li>
-<li>Let's Talk About Cross-Entropy Loss. Gentle introduction to cross-entropy loss for classification, and its relationship to log likelihood. Coming soon.</li>
+<li>A Friendly Introduction to Feed-Forward Neural Networks. An introduction to feed-forward networks with emphasis on computation graphs. Coming soon.</li>
+<li><a href="http://rdipietro.github.io/friendly-intro-to-cross-entropy-loss">A Friendly Introduction to Cross-Entropy Loss</a>. Gentle introduction to cross-entropy loss for classification, and its relationship to log likelihood.</li>
 <li><a href="http://rdipietro.github.io/tensorflow-scan-examples">TensorFlow Scan Examples</a>. Includes building, training, and evaluating a recurrent neural network from scratch.</li>
 </ul>
 
