--- a/tensorflow-scan-examples/index.html
+++ b/tensorflow-scan-examples/index.html
@@ -219,6 +219,7 @@ div#notebook {
 </li>
 <li><a href="#some-final-thoughts">Some Final Thoughts</a></li>
 <li><a href="#acknowledgements">Acknowledgements</a></li>
+<li><a href="#about-me">About Me</a></li>
 </ul>
 
 </div>
@@ -7810,7 +7811,19 @@ Q 45.0625 54.296875 48.78125 52.59375
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><a id="acknowledgements"></a></p>
-<h2 id="Acknowledgements">Acknowledgements<a class="anchor-link" href="#Acknowledgements">&#182;</a></h2><p>I'd like to thank my advisor, <a href="http://www.cs.jhu.edu/~hager/">Gregory D. Hager</a>, who directs the <a href="http://cirl.lcsr.jhu.edu/">Computational Interaction and Robotics Laboratory</a> and the <a href="http://malonecenter.jhu.edu/">Malone Center for Engineering in Healthcare</a> at Johns Hopkins University, for being supportive of this work.</p>
+<h2 id="Acknowledgements">Acknowledgements<a class="anchor-link" href="#Acknowledgements">&#182;</a></h2><p>I'd like to thank my advisor, <a href="http://www.cs.jhu.edu/~hager/">Gregory D. Hager</a>, for being supportive of this work.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><a id="About Me"></a></p>
+<h2 id="About-Me">About Me<a class="anchor-link" href="#About-Me">&#182;</a></h2><p>I'm <a href="http://rdipietro.github.com">Rob DiPietro</a>, a PhD student in the <a href="https://www.cs.jhu.edu/">Department of Computer Science at Johns Hopkins</a>, where I'm advised by <a href="http://www.cs.jhu.edu/~hager/">Gregory D. Hager</a>. I'm part of the <a href="http://cirl.lcsr.jhu.edu/">Computational Interaction and Robotics Laboratory</a> and the <a href="http://malonecenter.jhu.edu/">Malone Center for Engineering in Healthcare</a>. Previously, I was an associate research-staff member at <a href="http://www.ll.mit.edu/">MIT Lincoln Laboratory</a> and a BS/MS student at <a href="http://www.northeastern.edu/">Northeastern University</a>.</p>
+<p>You can find my other tutorials <a href="http://rdipietro.github.io/#tutorials">here</a>.</p>
 
 </div>
 </div>
